feat: update ui and styles

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,8 @@
   <body>
     <main id="app">
       <canvas class="app-canvas"></canvas>
-      </canvas>
       <div class="ui">
-        <button class="play">Play</button>
-        <button class="generate">Generate</button>
+        <button class="add">Add a shape</button>
         <button class="clear">Clear</button>
       </div>
     </main>
