--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebAPI Sandbox</title>
+    <title>Web Audio API Experience</title>
     <link rel="stylesheet" href="assets/fonts/inter-tight/style.css" />
     <script type="module" src="app.js"></script>
   </head>
@@ -12,8 +12,8 @@
     <main id="app">
       <canvas class="app-canvas"></canvas>
       <div class="ui">
-        <button class="add">Add a shape</button>
-        <button class="clear">Clear</button>
+        <button class="add">Draw a shape</button>
+        <button class="clear">Clear all</button>
       </div>
     </main>
   </body>
