--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,11 @@
   </head>
   <body>
     <main id="app">
-      <canvas class="app-canvas"></canvas>
+      <!-- <canvas class="app-canvas"></canvas>-->
       <div class="ui">
         <button class="add">Draw a shape</button>
         <button class="clear">Clear all</button>
+        <button class="low">Low freq.</button>
       </div>
     </main>
   </body>
