--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
       <!-- <canvas class="app-canvas"></canvas>-->
       <div class="ui">
         <button class="add">Draw a shape</button>
+        <button class="high-low">High/Low</button>
         <button class="clear">Clear all</button>
-        <button class="low">Low freq.</button>
       </div>
     </main>
   </body>
