feat(experience): improve experience and add features

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,16 @@
   </head>
   <body>
     <main id="app">
-      <!-- <canvas class="app-canvas"></canvas>-->
-      <div class="ui">
-        <button class="add">Draw a shape</button>
-        <button class="high-low">High/Low</button>
-        <button class="clear">Clear all</button>
+      <div class="buttons">
+        <button class="button button--triangle">Triangle</button>
+        <button class="button button--rectangle">Rectangle</button>
+        <button class="button button--circle">Circle</button>
+      </div>
+      <div class="options">
+        <button class="option option--gravity-x">Toggle Gravity (X)</button>
+        <button class="option option--gravity-y">Toggle Gravity (Y)</button>
+        <button class="option option--mute">Mute</button>
+        <button class="option option--clear">Clear</button>
       </div>
     </main>
   </body>
